program/rust/bindings2.rs

#[test]
fn bindgen_test_layout__opaque_pthread_rwlockattr_t() {
    assert_eq!(
        ::std::mem::size_of::<_opaque_pthread_rwlockattr_t>(),
        24usize,
        concat!("Size of: ", stringify!(_opaque_pthread_rwlockattr_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_opaque_pthread_rwlockattr_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_opaque_pthread_rwlockattr_t))
    );
    fn test_field___sig() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_opaque_pthread_rwlockattr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).__sig) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(_opaque_pthread_rwlockattr_t),
                "::",
                stringify!(__sig)
            )
        );
    }
    test_field___sig();
    fn test_field___opaque() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_opaque_pthread_rwlockattr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).__opaque) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(_opaque_pthread_rwlockattr_t),
                "::",
                stringify!(__opaque)
            )
        );
    }
    test_field___opaque();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _opaque_pthread_t {
    pub __sig: ::std::os::raw::c_long,
    pub __cleanup_stack: *mut __darwin_pthread_handler_rec,
    pub __opaque: [::std::os::raw::c_char; 8176usize],
}
#[test]
fn bindgen_test_layout__opaque_pthread_t() {
    assert_eq!(
        ::std::mem::size_of::<_opaque_pthread_t>(),
        8192usize,
        concat!("Size of: ", stringify!(_opaque_pthread_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_opaque_pthread_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_opaque_pthread_t))
    );
    fn test_field___sig() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_opaque_pthread_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).__sig) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(_opaque_pthread_t),
                "::",
                stringify!(__sig)
            )
        );
    }
    test_field___sig();
    fn test_field___cleanup_stack() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_opaque_pthread_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).__cleanup_stack) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(_opaque_pthread_t),
                "::",
                stringify!(__cleanup_stack)
            )
        );
    }
    test_field___cleanup_stack();
    fn test_field___opaque() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_opaque_pthread_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).__opaque) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(_opaque_pthread_t),
                "::",
                stringify!(__opaque)
            )
        );
    }
    test_field___opaque();
}
pub type __darwin_pthread_attr_t = _opaque_pthread_attr_t;
pub type __darwin_pthread_cond_t = _opaque_pthread_cond_t;
pub type __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;
pub type __darwin_pthread_key_t = ::std::os::raw::c_ulong;
pub type __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
pub type __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
pub type __darwin_pthread_once_t = _opaque_pthread_once_t;
pub type __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
pub type __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
pub type __darwin_pthread_t = *mut _opaque_pthread_t;
pub type u_int8_t = ::std::os::raw::c_uchar;
pub type u_int16_t = ::std::os::raw::c_ushort;
pub type u_int32_t = ::std::os::raw::c_uint;
pub type u_int64_t = ::std::os::raw::c_ulonglong;
pub type register_t = i64;
pub type user_addr_t = u_int64_t;
pub type user_size_t = u_int64_t;
pub type user_ssize_t = i64;
pub type user_long_t = i64;
pub type user_ulong_t = u_int64_t;
pub type user_time_t = i64;
pub type user_off_t = i64;
pub type syscall_arg_t = u_int64_t;
pub type intmax_t = ::std::os::raw::c_long;
pub type uintmax_t = ::std::os::raw::c_ulong;
pub const TIME_MACHINE_STRUCT_SIZE: u64 = 1864;
pub const EXTRA_PUBLISHER_SPACE: u64 = 1000;
extern "C" {
    pub static sysvar_clock: [u64; 4usize];
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union pc_pub_key {
    pub k1_: [u8; 32usize],
    pub k8_: [u64; 4usize],
}
#[test]
fn bindgen_test_layout_pc_pub_key() {
    assert_eq!(
        ::std::mem::size_of::<pc_pub_key>(),
        32usize,
        concat!("Size of: ", stringify!(pc_pub_key))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_pub_key>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_pub_key))
    );
    fn test_field_k1_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_pub_key>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).k1_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_pub_key),
                "::",
                stringify!(k1_)
            )
        );
    }
    test_field_k1_();
    fn test_field_k8_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_pub_key>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).k8_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_pub_key),
                "::",
                stringify!(k8_)
            )
        );
    }
    test_field_k8_();
}
pub type pc_pub_key_t = pc_pub_key;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pc_acc {
    pub magic_: u32,
    pub ver_: u32,
    pub type_: u32,
    pub size_: u32,
}
#[test]
fn bindgen_test_layout_pc_acc() {
    assert_eq!(
        ::std::mem::size_of::<pc_acc>(),
        16usize,
        concat!("Size of: ", stringify!(pc_acc))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_acc>(),
        4usize,
        concat!("Alignment of ", stringify!(pc_acc))
    );
    fn test_field_magic_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_acc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_acc),
                "::",
                stringify!(magic_)
            )
        );
    }
    test_field_magic_();
    fn test_field_ver_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_acc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ver_) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_acc),
                "::",
                stringify!(ver_)
            )
        );
    }
    test_field_ver_();
    fn test_field_type_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_acc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_acc),
                "::",
                stringify!(type_)
            )
        );
    }
    test_field_type_();
    fn test_field_size_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_acc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).size_) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_acc),
                "::",
                stringify!(size_)
            )
        );
    }
    test_field_size_();
}
pub type pc_acc_t = pc_acc;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pc_map_table {
    pub magic_: u32,
    pub ver_: u32,
    pub type_: u32,
    pub size_: u32,
    pub num_: u32,
    pub unused_: u32,
    pub next_: pc_pub_key_t,
    pub prod_: [pc_pub_key_t; 640usize],
}
